# selector_py_pod

./: .env.example  .gitignore  Makefile  README.md  requirements.txt  setup.cfg
src/selector_py_pod/: __main__.py  config.py
src/selector_py_pod/adapters/: cli_arguments.py  serial.py  spotify.py  twitter.py  youtube.py
src/selector_py_pod/domain/: config.py  selector.py  utils.py
src/selector_py_pod/models/: episode.py  selection.py
tests/adapters/: test_spotify.py
tests/domain/: test_config.py  test_selector.py  test_utils.py
