[metadata]
name = selector_py_pod
version = 0.0.1
author = fgomes
author_email = fgomes
description = SelectorPyPod
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fcgomes92/selectorpod.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src